Projeto/Compilador/tests/cases/error/T4.pas
program T4;
var
  v: array[1..3] of integer;
  b: boolean;
begin
  b := true;
  v[b] := 1;
end.
